--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-modal": "^3.16.1"
   }
 }
