--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
