--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "jsonwebtoken": "^9.0.1",
+    "mysql2": "^3.5.2",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
