--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.2",
     "next": "13.3.0",
